# explainable-robotics

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PYPI_DEPLOYMENT.md  README.md  README_PYPI.md  explainable-robotics.code-workspace  publish.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml  python-tests.yml
explainable_robotics/: README.md  __init__.py  cli.py  demo.py  main.py
explainable_robotics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
explainable_robotics/control/: __init__.py  humanoid.py  humanoid_controller.py
explainable_robotics/controller/: __init__.py  robot_controller.py
explainable_robotics/core/: __init__.py  gemini_agent.py  integrated_brain.py  integrated_system.py  multi_llm_agent.py
explainable_robotics/cortical/: __init__.py  biokan.py  biokan_cortex.py  model.py  neurotransmitters.py
explainable_robotics/demo/: humanoid_demo.py  integrated_demo.py
explainable_robotics/demos/: __init__.py  humanoid_demo.py
explainable_robotics/examples/: __init__.py  import_test.py  kan_llm_genesis_integration.py
explainable_robotics/genesis/: __init__.py  mock_genesis.py  robot_interface.py
explainable_robotics/llm/: gemini_agent.py  langchain_integration.py
explainable_robotics/utils/: __init__.py  conversion.py  env.py  explanation.py  logging.py  security.py
tests/: __init__.py  conftest.py  test_basic.py  test_core.py  test_simple.py  test_structure.py
(+4 files in other folders)
