[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explainable-robotics"
description = "神経科学的に妥当なヒューマノイドロボット制御のための説明可能AIフレームワーク"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Ryo Minegishi", email = "info@explainable-robotics.com"}
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/zapabob/explainable_robotics"
repository = "https://github.com/zapabob/explainable_robotics"

[tool.setuptools]
packages = ["explainable_robotics"]

[tool.setuptools.dynamic]
version = {attr = "explainable_robotics.__version__"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
explainable-robotics = "explainable_robotics.main:main" 